# redis-memory

./: README.md  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yaml
.github/workflows/: ci.yaml
docs/: index.md
docs-validate/: Dockerfile  docker-compose.yml  validate-docs.sh
docs/api/: reference.md
docs/development/: contributing.md  setup.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: agents.md  basic-usage.md  collections.md  context-management.md  namespacing.md
reformat/: Dockerfile  docker-compose.yml  reformat.sh
src/redis_memory/: __init__.py
tests/: test_memory.py
